fix svg title on IE9

--- a/drupal/sites/all/themes/antistatique/assets/sass/organisms/_header.scss
+++ b/drupal/sites/all/themes/antistatique/assets/sass/organisms/_header.scss
@@ -126,6 +126,10 @@
     height: auto;
     width: 100%;
     z-index: 11;
+
+    img {
+      width: 100%;
+    }
   }
 }
 .teammate-hero {
